# domus-ai

./: .gitignore  Dockerfile  README.md  docker-stack.yml  pyproject.toml  requirements.txt  work.todo
.github/workflows/: deploy.yml
.qdrant/: qdrant.sh
app/: main.py  pipeline_runner.py
app/api/: endpoints.py
config/: logging_config.py  settings.py
core/api/: house_info.py  http_client.py
core/chains/: search_chain.py
core/interfaces/: house_info.py
core/models/: house_info.py  response_body.py
core/nodes/: embedding_node.py  filter_node.py  ingestion_node.py  preprocessing_node.py  vectorstore_node.py
di/: ai_provider.py  parser_house_info_service.py
docs/: search_tech_design.md
infrastructure/: external_apis.py
infrastructure/ai/: llm_client.py
scripts/: build.sh
scripts/data_prep/: __init__.py
scripts/vectorstore_init/: __init__.py
service/: parser_house_info.py  pull_house_info.py
tests/unit/: 1.py  3.py  main copy 2.py  main copy.py  search_chain.py  test_ingestion_node.py  test_preprocessing_node.py
