[project]
name = "domus-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "rongtaosheng",email = "rongtaosheng@econ-tech.cn"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
